--- a/notebooks/climate-98-download.ipynb
+++ b/notebooks/climate-98-download.ipynb
@@ -132,11 +132,11 @@
             "application/vnd.holoviews_exec.v0+json": "",
             "text/html": [
               "<div id='p1004'>\n",
-              "  <div id=\"b9a4f56f-40ba-4317-aed3-e7c312f4e1f9\" data-root-id=\"p1004\" style=\"display: contents;\"></div>\n",
+              "  <div id=\"d964e554-5c38-4fc0-8772-99e7dc95b7ef\" data-root-id=\"p1004\" style=\"display: contents;\"></div>\n",
               "</div>\n",
               "<script type=\"application/javascript\">(function(root) {\n",
-              "  var docs_json = {\"472c2184-ac57-4866-b796-6adc9af416e7\":{\"version\":\"3.7.3\",\"title\":\"Bokeh Application\",\"roots\":[{\"type\":\"object\",\"name\":\"panel.models.browser.BrowserInfo\",\"id\":\"p1004\"},{\"type\":\"object\",\"name\":\"panel.models.comm_manager.CommManager\",\"id\":\"p1005\",\"attributes\":{\"plot_id\":\"p1004\",\"comm_id\":\"78dc60d770dd4e4486daf62889b7fdbe\",\"client_comm_id\":\"d1e0f8c9b1464530912173ee7871b291\"}}],\"defs\":[{\"type\":\"model\",\"name\":\"ReactiveHTML1\"},{\"type\":\"model\",\"name\":\"FlexBox1\",\"properties\":[{\"name\":\"align_content\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"align_items\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"flex_direction\",\"kind\":\"Any\",\"default\":\"row\"},{\"name\":\"flex_wrap\",\"kind\":\"Any\",\"default\":\"wrap\"},{\"name\":\"gap\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"justify_content\",\"kind\":\"Any\",\"default\":\"flex-start\"}]},{\"type\":\"model\",\"name\":\"FloatPanel1\",\"properties\":[{\"name\":\"config\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"contained\",\"kind\":\"Any\",\"default\":true},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"right-top\"},{\"name\":\"offsetx\",\"kind\":\"Any\",\"default\":null},{\"name\":\"offsety\",\"kind\":\"Any\",\"default\":null},{\"name\":\"theme\",\"kind\":\"Any\",\"default\":\"primary\"},{\"name\":\"status\",\"kind\":\"Any\",\"default\":\"normalized\"}]},{\"type\":\"model\",\"name\":\"GridStack1\",\"properties\":[{\"name\":\"ncols\",\"kind\":\"Any\",\"default\":null},{\"name\":\"nrows\",\"kind\":\"Any\",\"default\":null},{\"name\":\"allow_resize\",\"kind\":\"Any\",\"default\":true},{\"name\":\"allow_drag\",\"kind\":\"Any\",\"default\":true},{\"name\":\"state\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"drag1\",\"properties\":[{\"name\":\"slider_width\",\"kind\":\"Any\",\"default\":5},{\"name\":\"slider_color\",\"kind\":\"Any\",\"default\":\"black\"},{\"name\":\"value\",\"kind\":\"Any\",\"default\":50}]},{\"type\":\"model\",\"name\":\"click1\",\"properties\":[{\"name\":\"terminal_output\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"debug_name\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"clears\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"FastWrapper1\",\"properties\":[{\"name\":\"object\",\"kind\":\"Any\",\"default\":null},{\"name\":\"style\",\"kind\":\"Any\",\"default\":null}]},{\"type\":\"model\",\"name\":\"NotificationArea1\",\"properties\":[{\"name\":\"js_events\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"max_notifications\",\"kind\":\"Any\",\"default\":5},{\"name\":\"notifications\",\"kind\":\"Any\",\"default\":[]},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"bottom-right\"},{\"name\":\"_clear\",\"kind\":\"Any\",\"default\":0},{\"name\":\"types\",\"kind\":\"Any\",\"default\":[{\"type\":\"map\",\"entries\":[[\"type\",\"warning\"],[\"background\",\"#ffc107\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-exclamation-triangle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]},{\"type\":\"map\",\"entries\":[[\"type\",\"info\"],[\"background\",\"#007bff\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-info-circle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]}]}]},{\"type\":\"model\",\"name\":\"Notification\",\"properties\":[{\"name\":\"background\",\"kind\":\"Any\",\"default\":null},{\"name\":\"duration\",\"kind\":\"Any\",\"default\":3000},{\"name\":\"icon\",\"kind\":\"Any\",\"default\":null},{\"name\":\"message\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"notification_type\",\"kind\":\"Any\",\"default\":null},{\"name\":\"_rendered\",\"kind\":\"Any\",\"default\":false},{\"name\":\"_destroyed\",\"kind\":\"Any\",\"default\":false}]},{\"type\":\"model\",\"name\":\"TemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"BootstrapTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"TemplateEditor1\",\"properties\":[{\"name\":\"layout\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"MaterialTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"ReactiveESM1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"JSComponent1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"ReactComponent1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"AnyWidgetComponent1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"request_value1\",\"properties\":[{\"name\":\"fill\",\"kind\":\"Any\",\"default\":\"none\"},{\"name\":\"_synced\",\"kind\":\"Any\",\"default\":null},{\"name\":\"_request_sync\",\"kind\":\"Any\",\"default\":0}]}]}};\n",
-              "  var render_items = [{\"docid\":\"472c2184-ac57-4866-b796-6adc9af416e7\",\"roots\":{\"p1004\":\"b9a4f56f-40ba-4317-aed3-e7c312f4e1f9\"},\"root_ids\":[\"p1004\"]}];\n",
+              "  var docs_json = {\"30ecdf9b-7b6f-4047-9cc1-bbb6b1414f75\":{\"version\":\"3.7.3\",\"title\":\"Bokeh Application\",\"roots\":[{\"type\":\"object\",\"name\":\"panel.models.browser.BrowserInfo\",\"id\":\"p1004\"},{\"type\":\"object\",\"name\":\"panel.models.comm_manager.CommManager\",\"id\":\"p1005\",\"attributes\":{\"plot_id\":\"p1004\",\"comm_id\":\"982e0ccb840945f5869adbacf77a591b\",\"client_comm_id\":\"0c5cd14c405c4ef9ba9483e7a485d9de\"}}],\"defs\":[{\"type\":\"model\",\"name\":\"ReactiveHTML1\"},{\"type\":\"model\",\"name\":\"FlexBox1\",\"properties\":[{\"name\":\"align_content\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"align_items\",\"kind\":\"Any\",\"default\":\"flex-start\"},{\"name\":\"flex_direction\",\"kind\":\"Any\",\"default\":\"row\"},{\"name\":\"flex_wrap\",\"kind\":\"Any\",\"default\":\"wrap\"},{\"name\":\"gap\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"justify_content\",\"kind\":\"Any\",\"default\":\"flex-start\"}]},{\"type\":\"model\",\"name\":\"FloatPanel1\",\"properties\":[{\"name\":\"config\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"contained\",\"kind\":\"Any\",\"default\":true},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"right-top\"},{\"name\":\"offsetx\",\"kind\":\"Any\",\"default\":null},{\"name\":\"offsety\",\"kind\":\"Any\",\"default\":null},{\"name\":\"theme\",\"kind\":\"Any\",\"default\":\"primary\"},{\"name\":\"status\",\"kind\":\"Any\",\"default\":\"normalized\"}]},{\"type\":\"model\",\"name\":\"GridStack1\",\"properties\":[{\"name\":\"ncols\",\"kind\":\"Any\",\"default\":null},{\"name\":\"nrows\",\"kind\":\"Any\",\"default\":null},{\"name\":\"allow_resize\",\"kind\":\"Any\",\"default\":true},{\"name\":\"allow_drag\",\"kind\":\"Any\",\"default\":true},{\"name\":\"state\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"drag1\",\"properties\":[{\"name\":\"slider_width\",\"kind\":\"Any\",\"default\":5},{\"name\":\"slider_color\",\"kind\":\"Any\",\"default\":\"black\"},{\"name\":\"value\",\"kind\":\"Any\",\"default\":50}]},{\"type\":\"model\",\"name\":\"click1\",\"properties\":[{\"name\":\"terminal_output\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"debug_name\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"clears\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"FastWrapper1\",\"properties\":[{\"name\":\"object\",\"kind\":\"Any\",\"default\":null},{\"name\":\"style\",\"kind\":\"Any\",\"default\":null}]},{\"type\":\"model\",\"name\":\"NotificationArea1\",\"properties\":[{\"name\":\"js_events\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}},{\"name\":\"max_notifications\",\"kind\":\"Any\",\"default\":5},{\"name\":\"notifications\",\"kind\":\"Any\",\"default\":[]},{\"name\":\"position\",\"kind\":\"Any\",\"default\":\"bottom-right\"},{\"name\":\"_clear\",\"kind\":\"Any\",\"default\":0},{\"name\":\"types\",\"kind\":\"Any\",\"default\":[{\"type\":\"map\",\"entries\":[[\"type\",\"warning\"],[\"background\",\"#ffc107\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-exclamation-triangle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]},{\"type\":\"map\",\"entries\":[[\"type\",\"info\"],[\"background\",\"#007bff\"],[\"icon\",{\"type\":\"map\",\"entries\":[[\"className\",\"fas fa-info-circle\"],[\"tagName\",\"i\"],[\"color\",\"white\"]]}]]}]}]},{\"type\":\"model\",\"name\":\"Notification\",\"properties\":[{\"name\":\"background\",\"kind\":\"Any\",\"default\":null},{\"name\":\"duration\",\"kind\":\"Any\",\"default\":3000},{\"name\":\"icon\",\"kind\":\"Any\",\"default\":null},{\"name\":\"message\",\"kind\":\"Any\",\"default\":\"\"},{\"name\":\"notification_type\",\"kind\":\"Any\",\"default\":null},{\"name\":\"_rendered\",\"kind\":\"Any\",\"default\":false},{\"name\":\"_destroyed\",\"kind\":\"Any\",\"default\":false}]},{\"type\":\"model\",\"name\":\"TemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"BootstrapTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"TemplateEditor1\",\"properties\":[{\"name\":\"layout\",\"kind\":\"Any\",\"default\":[]}]},{\"type\":\"model\",\"name\":\"MaterialTemplateActions1\",\"properties\":[{\"name\":\"open_modal\",\"kind\":\"Any\",\"default\":0},{\"name\":\"close_modal\",\"kind\":\"Any\",\"default\":0}]},{\"type\":\"model\",\"name\":\"ReactiveESM1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"JSComponent1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"ReactComponent1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"AnyWidgetComponent1\",\"properties\":[{\"name\":\"esm_constants\",\"kind\":\"Any\",\"default\":{\"type\":\"map\"}}]},{\"type\":\"model\",\"name\":\"request_value1\",\"properties\":[{\"name\":\"fill\",\"kind\":\"Any\",\"default\":\"none\"},{\"name\":\"_synced\",\"kind\":\"Any\",\"default\":null},{\"name\":\"_request_sync\",\"kind\":\"Any\",\"default\":0}]}]}};\n",
+              "  var render_items = [{\"docid\":\"30ecdf9b-7b6f-4047-9cc1-bbb6b1414f75\",\"roots\":{\"p1004\":\"d964e554-5c38-4fc0-8772-99e7dc95b7ef\"},\"root_ids\":[\"p1004\"]}];\n",
               "  var docs = Object.values(docs_json)\n",
               "  if (!docs) {\n",
               "    return\n",
@@ -215,7 +215,8 @@
         "# Import required packages\n",
         "import holoviews as hv\n",
         "import hvplot.pandas\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "import earthpy"
       ]
     },
     {
@@ -246,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 12,
       "id": "ff004b7c",
       "metadata": {
         "template": "student"
@@ -255,23 +256,24 @@
         {
           "data": {
             "text/plain": [
-              "'https://www.ncei.noaa.gov/access/services/data/v1?dataset=daily-summaries&dataTypes=TAVG&stations=PKM00041780&startDate=1942-05-06&endDate=2025-07-18&units=standard'"
+              "'https://www.ncei.noaa.gov/access/services/data/v1?dataset=daily-summaries&dataTypes=TOBS&stations=USC00264016&startDate=1986-04-01&endDate=2025-07-22&units=standard'"
             ]
           },
-          "execution_count": 7,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "karachi_api = ('https://www.ncei.noaa.gov/access/services/data/v1?'\n",
+        "# Access the Snake River Plain weather station: Jackpot, NV\n",
+        "srp_api = ('https://www.ncei.noaa.gov/access/services/data/v1?'\n",
         "           'dataset=daily-summaries&'\n",
-        "           'dataTypes=TAVG&'\n",
-        "           'stations=PKM00041780&'\n",
-        "           'startDate=1942-05-06&'\n",
-        "           'endDate=2025-07-18&'\n",
+        "           'dataTypes=TOBS&'\n",
+        "           'stations=USC00264016&'\n",
+        "           'startDate=1986-04-01&'\n",
+        "           'endDate=2025-07-22&'\n",
         "           'units=standard')\n",
-        "karachi_api"
+        "srp_api"
       ]
     },
     {
@@ -290,20 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "b5cddd32",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Skip. Should have been part of Wrangle.\n",
-        "project = earthpy.Project(dirname=project_dirname)\n",
-        "project.get_data(url=ncei_url, filename=ncei_filename)\n",
-        "ncei_path = project.project_dir / ncei_filename"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 13,
       "id": "f032bf23",
       "metadata": {
         "template": "student"
@@ -331,7 +320,7 @@
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
               "      <th>STATION</th>\n",
-              "      <th>TAVG</th>\n",
+              "      <th>TOBS</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>DATE</th>\n",
@@ -341,45 +330,45 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>1942-05-06</th>\n",
-              "      <td>PKM00041780</td>\n",
-              "      <td>90</td>\n",
+              "      <th>1986-04-01</th>\n",
+              "      <td>USC00264016</td>\n",
+              "      <td>39.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1942-05-07</th>\n",
-              "      <td>PKM00041780</td>\n",
-              "      <td>85</td>\n",
+              "      <th>1986-04-02</th>\n",
+              "      <td>USC00264016</td>\n",
+              "      <td>28.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1942-05-08</th>\n",
-              "      <td>PKM00041780</td>\n",
-              "      <td>87</td>\n",
+              "      <th>1986-04-03</th>\n",
+              "      <td>USC00264016</td>\n",
+              "      <td>38.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1942-05-09</th>\n",
-              "      <td>PKM00041780</td>\n",
-              "      <td>86</td>\n",
+              "      <th>1986-04-04</th>\n",
+              "      <td>USC00264016</td>\n",
+              "      <td>42.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1942-05-10</th>\n",
-              "      <td>PKM00041780</td>\n",
-              "      <td>86</td>\n",
+              "      <th>1986-04-05</th>\n",
+              "      <td>USC00264016</td>\n",
+              "      <td>49.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                STATION  TAVG\n",
+              "                STATION  TOBS\n",
               "DATE                         \n",
-              "1942-05-06  PKM00041780    90\n",
-              "1942-05-07  PKM00041780    85\n",
-              "1942-05-08  PKM00041780    87\n",
-              "1942-05-09  PKM00041780    86\n",
-              "1942-05-10  PKM00041780    86"
+              "1986-04-01  USC00264016  39.0\n",
+              "1986-04-02  USC00264016  28.0\n",
+              "1986-04-03  USC00264016  38.0\n",
+              "1986-04-04  USC00264016  42.0\n",
+              "1986-04-05  USC00264016  49.0"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -387,7 +376,7 @@
       "source": [
         "# Download the climate data\n",
         "climate_df = pd.read_csv(\n",
-        "    karachi_api,\n",
+        "    srp_api,\n",
         "    index_col = 'DATE',\n",
         "    parse_dates = True,\n",
         "    na_values = ['NaN']\n",
