--- a/notebooks/climate-98-download.ipynb
+++ b/notebooks/climate-98-download.ipynb
@@ -1433,6 +1433,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 52,
+      "id": "c6476cb4",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save the plot (which is technically an overlay)\n",
+        "hv.save(ann_climate_plot, 'SRP_climate_plot.html')"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "id": "2ebf243a-8698-4cd4-ab90-c7d1bda6e88a",
       "metadata": {},
@@ -1446,12 +1457,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "id": "3f064ace",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Stored 'temp_curve' (Overlay)\n",
+            "Stored 'ann_climate_df' (DataFrame)\n"
+          ]
+        }
+      ],
       "source": [
-        "%store var1 var2"
+        "%store temp_curve ann_climate_df"
       ]
     },
     {
